@@ -2,6 +2,10 @@ bootJar {
     enabled = true
 }
 
+test {
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
+}
+
 dependencies {
     implementation project(':modules:common')
     implementation project(':modules:auth-contract')
